feat(ss): aead 2022 eih tcp