@@ -1,8 +1,8 @@
 package com.urbanspork.test;
 
-import com.urbanspork.common.config.ClientConfig;
-import com.urbanspork.common.config.ClientConfigTestCase;
-import com.urbanspork.common.config.ServerConfig;
+import com.urbanspork.common.codec.CipherKind;
+import com.urbanspork.common.config.*;
+import com.urbanspork.common.protocol.Protocols;
 import com.urbanspork.test.template.Parameter;
 import com.urbanspork.test.template.TCPTestTemplate;
 import io.netty.channel.DefaultEventLoop;
@@ -10,6 +10,8 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ArgumentsSource;
 
+import java.util.ArrayList;
+import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -20,17 +22,30 @@ class TCPTestCase extends TCPTestTemplate {
     @ArgumentsSource(Parameter.Provider.class)
     void testByParameter(Parameter parameter) throws ExecutionException, InterruptedException {
         int[] ports = TestUtil.freePorts(2);
-        ClientConfig config = ClientConfigTestCase.testConfig(ports[0], ports[1]);
-        ServerConfig serverConfig = config.getServers().getFirst();
+        CipherKind cipher = parameter.cipher();
+        ServerConfig serverConfig = ServerConfigTestCase.testConfig(ports[1]);
         serverConfig.setProtocol(parameter.protocol());
-        serverConfig.setCipher(parameter.cipher());
-        serverConfig.setPassword(parameter.password());
-        ExecutorService service = Executors.newFixedThreadPool(2);
+        serverConfig.setCipher(cipher);
+        serverConfig.setPassword(parameter.serverPassword());
+        if (Protocols.shadowsocks == parameter.protocol() && cipher.isAead2022() && cipher.supportEih()) {
+            List<ServerUserConfig> user = new ArrayList<>();
+            user.add(new ServerUserConfig(TestDice.rollString(10), parameter.clientPassword()));
+            serverConfig.setUser(user);
+        }
+        ExecutorService service = Executors.newVirtualThreadPerTaskExecutor();
         DefaultEventLoop eventLoop = new DefaultEventLoop();
-        launchServer(service, eventLoop, config.getServers());
+        launchServer(service, eventLoop, List.of(serverConfig));
+        ClientConfig config = ClientConfigTestCase.testConfig(ports[0], ports[1]);
+        ServerConfig current = config.getServers().getFirst();
+        current.setCipher(cipher);
+        current.setProtocol(parameter.protocol());
+        current.setPassword(parameter.serverPassword());
+        if (Protocols.shadowsocks == parameter.protocol() && cipher.isAead2022() && cipher.supportEih()) {
+            current.setPassword(parameter.serverPassword() + ":" + parameter.clientPassword());
+        }
         launchClient(service, eventLoop, config);
         handshakeAndSendBytes(config);
-        service.shutdownNow();
+        service.shutdown();
         eventLoop.shutdownGracefully();
     }
 }
